--- a/Pandas100 11-20.ipynb
+++ b/Pandas100 11-20.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,204 @@
    ],
    "source": [
     "print(df[(df[filter_names[0]] == filter_values[0]) & (df[filter_names[1]] < filter_values[1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({'animal': ['cat', 'cat', 'snake', 'dog', 'dog', 'cat', 'snake', 'cat', 'dog', 'dog'],\n",
+    "                   'age': [2.5, 3, 0.5, np.nan, 5, 2, 4.5, np.nan, 7, 3],\n",
+    "                   'name': ['Murzik', 'Pushok', 'Kaa', 'Bobik', 'Strelka', 'Vaska', 'Kaa2', 'Murka', 'Graf', 'Muhtar'],\n",
+    "                   'visits': [1, 3, 2, 3, 2, 3, 1, 1, 2, 1],\n",
+    "                   'priority': ['yes', 'yes', 'no', 'yes', 'no', 'no', 'no', 'yes', 'no', 'no']},\n",
+    "                 index = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j'])\n",
+    "age_between = [2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>animal</th>\n",
+       "      <th>name</th>\n",
+       "      <th>priority</th>\n",
+       "      <th>visits</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>Murzik</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>Pushok</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>0.5</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>Kaa</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>Bobik</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>Strelka</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>Vaska</td>\n",
+       "      <td>no</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>snake</td>\n",
+       "      <td>Kaa2</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cat</td>\n",
+       "      <td>Murka</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>Graf</td>\n",
+       "      <td>no</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>j</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>dog</td>\n",
+       "      <td>Muhtar</td>\n",
+       "      <td>no</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age animal     name priority  visits\n",
+       "a  2.5    cat   Murzik      yes       1\n",
+       "b  3.0    cat   Pushok      yes       3\n",
+       "c  0.5  snake      Kaa       no       2\n",
+       "d  NaN    dog    Bobik      yes       3\n",
+       "e  5.0    dog  Strelka       no       2\n",
+       "f  2.0    cat    Vaska       no       3\n",
+       "g  4.5  snake     Kaa2       no       1\n",
+       "h  NaN    cat    Murka      yes       1\n",
+       "i  7.0    dog     Graf       no       2\n",
+       "j  3.0    dog   Muhtar       no       1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age animal    name priority  visits\n",
+      "a  2.5    cat  Murzik      yes       1\n",
+      "b  3.0    cat  Pushok      yes       3\n",
+      "f  2.0    cat   Vaska       no       3\n",
+      "j  3.0    dog  Muhtar       no       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[(df['age'] >= age_between[0]) & (df['age'] <= age_between[1])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age animal    name priority  visits\n",
+      "a  2.5    cat  Murzik      yes       1\n",
+      "b  3.0    cat  Pushok      yes       3\n",
+      "f  2.0    cat   Vaska       no       3\n",
+      "j  3.0    dog  Muhtar       no       1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[df['age'].between(*age_between, inclusive=True)])"
    ]
   },
   {
